fix cut off logos

--- a/assets/sass/_prom.scss
+++ b/assets/sass/_prom.scss
@@ -46,7 +46,7 @@
 }
 
 .row.specialthanks {
-  min-height: 160px;
+  min-height: 180px;
 }
 
 .walksf {
